--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -17,3 +17,16 @@ h1 {
   max-width: 400px;
   margin: 0 auto;
 }
+
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  outline: none;
+  border: none;
+  background: none;
+}
